<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_label_continue">Continue</string>
    <string name="button_label_new_game">New Game</string>
    <string name="button_label_about">About</string>
    <string name="button_label_exit">Exit</string>

</resources>
